<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/you"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/comp2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/userscore"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/displays_user_score"
        android:gravity="center"
        android:text="@string/__0"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/compscore"
        android:layout_width="98dp"
        android:layout_height="51dp"
        android:contentDescription="@string/displays_computer_score"
        android:gravity="center"
        android:text="@string/__0"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-6dp" />


    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="232dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/choosestone"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="555dp"
        android:background="@null"
        android:contentDescription="@string/selects_stone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/rok3" />

    <ImageButton
        android:id="@+id/choosepaper"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/selects_paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/choosescissors"
        app:layout_constraintStart_toEndOf="@+id/choosestone"
        app:srcCompat="@mipmap/paper" />

    <ImageButton
        android:id="@+id/choosescissors"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="51dp"
        android:contentDescription="@string/selects_scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.081"
        app:srcCompat="@mipmap/scissors" />

    <ImageButton
        android:id="@+id/restartButton"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="645dp"
        android:layout_marginEnd="309dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/resets_the_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/retry" />

    <Button
        android:id="@+id/exiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/choosescissors"
        app:layout_constraintVertical_bias="0.338" />


    <ImageView
        android:id="@+id/userChoiceimg"
        android:layout_width="145dp"
        android:layout_height="201dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="219dp"
        android:contentDescription="@string/shows_the_image_of_user_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/compChoiceimg"
        android:layout_width="145dp"
        android:layout_height="201dp"

        android:layout_marginStart="237dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="219dp"
        android:contentDescription="@string/displays_the_image_selected_by_the_pc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/judge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="179dp"
        android:layout_marginBottom="436dp"
        android:text="@string/welcome_to_the_classic_stone_paper_scissors_game_play_more_to_unlock_additional_features_click_one_of_the_3_to_get_started"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="659dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="45dp"
        android:text="@string/always_win_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/stone"
        android:text="@string/Stone"
        app:layout_constraintBottom_toTopOf="@+id/choosestone"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="187dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="185dp"
        android:text="@string/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="527dp"
        android:layout_marginBottom="185dp"
        android:text="@string/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restartTe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="706dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="6dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>